--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script>
-    window.location.href = "https://github.com/jyotirmoy.dev/openfy/";
+    window.location.href = "https://github.com/jyotirmoydotdev/openfy/";
   </script>
 </head>
 <body>
